--- a/Reddit/Reddit/Storyboards/Base.lproj/Main.storyboard
+++ b/Reddit/Reddit/Storyboards/Base.lproj/Main.storyboard
@@ -86,25 +86,61 @@
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostTableViewCell" id="bEI-Wi-sdG" customClass="PostTableViewCell" customModule="Reddit" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bEI-Wi-sdG" id="XMO-L5-j1O">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bEI-Wi-sdG" id="XMO-L5-j1O">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dW-E3-rs9">
-                                            <rect key="frame" x="0.0" y="-1" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dW-E3-rs9">
+                                            <rect key="frame" x="12" y="12" width="390" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s6b-34-zZj" userLabel="Title">
+                                            <rect key="frame" x="12" y="38.5" width="390" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iYm-a8-k0S">
+                                            <rect key="frame" x="12" y="74.5" width="390" height="150.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="150" id="GgA-8S-p3k"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ntb-tu-0FQ">
+                                            <rect key="frame" x="12" y="237" width="390" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="Ntb-tu-0FQ" secondAttribute="trailing" constant="12" id="6GD-rt-3gf"/>
+                                        <constraint firstAttribute="trailing" secondItem="3dW-E3-rs9" secondAttribute="trailing" constant="12" id="7Yl-4a-6BF"/>
+                                        <constraint firstItem="Ntb-tu-0FQ" firstAttribute="top" secondItem="iYm-a8-k0S" secondAttribute="bottom" constant="12" id="7ne-RD-ZA3"/>
+                                        <constraint firstItem="s6b-34-zZj" firstAttribute="top" secondItem="3dW-E3-rs9" secondAttribute="bottom" constant="12" id="8xZ-Fd-eHP"/>
+                                        <constraint firstItem="3dW-E3-rs9" firstAttribute="top" secondItem="XMO-L5-j1O" secondAttribute="top" constant="12" id="OgO-0m-UcQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="s6b-34-zZj" secondAttribute="trailing" constant="12" id="Rno-kT-dxH"/>
+                                        <constraint firstItem="s6b-34-zZj" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="U95-SC-p8w"/>
+                                        <constraint firstItem="iYm-a8-k0S" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="dPs-I1-ihL"/>
+                                        <constraint firstItem="iYm-a8-k0S" firstAttribute="top" secondItem="s6b-34-zZj" secondAttribute="bottom" constant="16.5" id="dRf-fT-G4G"/>
+                                        <constraint firstAttribute="trailing" secondItem="iYm-a8-k0S" secondAttribute="trailing" constant="12" id="fgL-dz-VxY"/>
+                                        <constraint firstItem="3dW-E3-rs9" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="lbK-uN-2lu"/>
+                                        <constraint firstItem="Ntb-tu-0FQ" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="ogo-Gc-4Fo"/>
+                                        <constraint firstAttribute="bottom" secondItem="Ntb-tu-0FQ" secondAttribute="bottom" constant="14.5" id="vNO-1F-Lig"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="author" destination="3dW-E3-rs9" id="D3s-NF-7f1"/>
+                                    <outlet property="numberOfComments" destination="Ntb-tu-0FQ" id="SUw-lj-ZFj"/>
+                                    <outlet property="postTitle" destination="s6b-34-zZj" id="Rqw-Pg-aE7"/>
+                                    <outlet property="thumbnail" destination="iYm-a8-k0S" id="ATG-Gd-eDl"/>
                                     <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="sq5-7u-IZl"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="7bK-jq-Zjz" id="0Qo-hA-RvW"/>
                             <outlet property="delegate" destination="7bK-jq-Zjz" id="YJk-W5-2Wo"/>
@@ -117,7 +153,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="709" y="-630"/>
+            <point key="canvasLocation" x="708.69565217391312" y="-630.13392857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r7l-gg-dq7">
