--- a/Reddit/Reddit/Storyboards/Base.lproj/Main.storyboard
+++ b/Reddit/Reddit/Storyboards/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dW-E3-rs9">
-                                            <rect key="frame" x="12" y="12" width="390" height="14.5"/>
+                                            <rect key="frame" x="12" y="12" width="368" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
@@ -102,7 +102,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iYm-a8-k0S">
+                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iYm-a8-k0S">
                                             <rect key="frame" x="12" y="74.5" width="390" height="150.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="150" id="GgA-8S-p3k"/>
@@ -114,12 +114,26 @@
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cQY-Fe-uKY" userLabel="Status">
+                                            <rect key="frame" x="392" y="10" width="10" height="10"/>
+                                            <color key="backgroundColor" red="0.094117647060000004" green="0.29834170609999999" blue="0.72763574819999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="10" id="04g-vL-cQ2"/>
+                                                <constraint firstAttribute="height" constant="10" id="0h4-iz-WbL"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="Ntb-tu-0FQ" secondAttribute="trailing" constant="12" id="6GD-rt-3gf"/>
-                                        <constraint firstAttribute="trailing" secondItem="3dW-E3-rs9" secondAttribute="trailing" constant="12" id="7Yl-4a-6BF"/>
                                         <constraint firstItem="Ntb-tu-0FQ" firstAttribute="top" secondItem="iYm-a8-k0S" secondAttribute="bottom" constant="12" id="7ne-RD-ZA3"/>
                                         <constraint firstItem="s6b-34-zZj" firstAttribute="top" secondItem="3dW-E3-rs9" secondAttribute="bottom" constant="12" id="8xZ-Fd-eHP"/>
+                                        <constraint firstAttribute="trailing" secondItem="cQY-Fe-uKY" secondAttribute="trailing" constant="12" id="HjO-vt-MdP"/>
                                         <constraint firstItem="3dW-E3-rs9" firstAttribute="top" secondItem="XMO-L5-j1O" secondAttribute="top" constant="12" id="OgO-0m-UcQ"/>
                                         <constraint firstAttribute="trailing" secondItem="s6b-34-zZj" secondAttribute="trailing" constant="12" id="Rno-kT-dxH"/>
                                         <constraint firstItem="s6b-34-zZj" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="U95-SC-p8w"/>
@@ -128,13 +142,16 @@
                                         <constraint firstAttribute="trailing" secondItem="iYm-a8-k0S" secondAttribute="trailing" constant="12" id="fgL-dz-VxY"/>
                                         <constraint firstItem="3dW-E3-rs9" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="lbK-uN-2lu"/>
                                         <constraint firstItem="Ntb-tu-0FQ" firstAttribute="leading" secondItem="XMO-L5-j1O" secondAttribute="leading" constant="12" id="ogo-Gc-4Fo"/>
+                                        <constraint firstItem="cQY-Fe-uKY" firstAttribute="leading" secondItem="3dW-E3-rs9" secondAttribute="trailing" constant="12" id="tlu-hl-inq"/>
                                         <constraint firstAttribute="bottom" secondItem="Ntb-tu-0FQ" secondAttribute="bottom" constant="14.5" id="vNO-1F-Lig"/>
+                                        <constraint firstItem="cQY-Fe-uKY" firstAttribute="top" secondItem="XMO-L5-j1O" secondAttribute="top" constant="10" id="yEO-Ie-0Vd"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="author" destination="3dW-E3-rs9" id="D3s-NF-7f1"/>
                                     <outlet property="numberOfComments" destination="Ntb-tu-0FQ" id="SUw-lj-ZFj"/>
                                     <outlet property="postTitle" destination="s6b-34-zZj" id="Rqw-Pg-aE7"/>
+                                    <outlet property="status" destination="cQY-Fe-uKY" id="nC8-IA-Flm"/>
                                     <outlet property="thumbnail" destination="iYm-a8-k0S" id="ATG-Gd-eDl"/>
                                     <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="sq5-7u-IZl"/>
                                 </connections>
